@@ -14,6 +14,7 @@
 /c-strcaseeq.h
 /c-strncasecmp.c
 /config.charset
+/declared.sh
 /errno.in.h
 /flexmember.h
 /float+.h
