@@ -1,3 +1,8 @@
+2019-02-03  Bruno Haible  <bruno@clisp.org>
+
+	Move declared.sh to gnulib.
+	* autogen.sh: Copy lib/declared.sh from gnulib.
+
 2019-01-28  Bruno Haible  <bruno@clisp.org>
 
 	Accommodate a shell that is not in /bin/sh.
